<resources>
    <string name="app_name">EZMall</string>
    <string name="view_chooser_text">Select an option from below:</string>
    <string name="order_list">Order List</string>
    <string name="order_with_issues">Order Detail (With Issues)</string>
    <string name="order_no_issues">Order (No Issues)</string>
    <string name="order_details">Order Details</string>
    <string name="open_issues">Open Issue: 1</string>
    <string name="order_date">Date: %s</string>
    <string name="order_status_ordered">Ordered</string>
    <string name="order_status_ready_to_ship">Ready to ship</string>
    <string name="order_status_cancelled">Cancelled</string>
    <string name="order_Status_shipped">Shipped</string>
    <string name="order_Status_delivered">Delivered</string>
    <string name="title_orders">My Orders</string>

    <string name="cost">₹ %.2f</string>
    <string name="sub_order_no">Suborder No. %s</string>
    <string name="order_no">Order No. %s</string>
    <string name="rs">Rs. %.2f</string>
    <string name="size">Size: %s</string>
    <string name="color">Color: %s</string>
    <string name="qty">Qty : %d</string>
    <string name="return_policy_validity">Return policy valid till %s</string>
    <string name="know_more">KNOW MORE</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="list_price">List Price</string>
    <string name="selling_price">Selling Price</string>
    <string name="shipping_price">Shipping Price</string>
    <string name="total">Total</string>
    <string name="coupon_discounts">Coupon Discounts</string>
    <string name="rs_minus">-Rs. %.2f</string>
    <string name="other_discount">Other Discounts</string>
    <string name="payable_amount">Payable After Discount</string>
    <string name="include_tex">Above Prices are inclusive of taxes, if applicable</string>
    <string name="other_support">For cancellation, return and replacment or any other support</string>
    <string name="view_faq">View FAQ\'s</string>
    <string name="call_us">Call Us</string>
    <string name="deliver_to">DELIVER TO</string>
    <string name="issue_registered">Issues Registered</string>
    <string name="open">%s OPEN</string>
    <string name="issue_id">ISSUE ID : </string>
    <string name="status">STATUS</string>
    <string name="issue_type">Issue type: </string>
    <string name="registered_on">Registered on </string>
    <string name="order_Detail">ORDER DETAILS</string>
    <string name="expected">Expected by %s</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="order_status_ordered">Ordered</string>
    <string name="order_status_ready_to_ship">Ready to Ship</string>
    <string name="order_Status_shipped">Shipped</string>
    <string name="order_Status_delivered">Delivery</string>
</resources>
